feat: add Dunjia charting experience
